feat(features): Add log message unique sequence number
Add log message unique sequence number.

Refactoring kernel core code.

BREAKING CHANGE: Add log message unique sequence number

Refactoring
kernel core code.