@@ -49,6 +49,16 @@
           <source>${java.version}</source>
           <target>${java.version}</target>
           <compilerVersion>${java.version}</compilerVersion>
+          <!-- 如果我们的代码想要访问JDK模块化的代码,可以使用下面的选项.-->
+          <!-- ALL-UNNAMED未命名的意思是开放给所有的包访问,如果想固定给某个包的话,填写对应的包名即可.-->
+          <compilerArgs>
+            <arg>--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/jdk.internal.logger=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/sun.util.logging=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.base/sun.util.logging=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
         <groupId>org.apache.maven.plugins</groupId>
         <version>3.8.1</version>
